@@ -158,3 +158,4 @@
 [2025-1.17-02x88] New 'api.require' node - devicefs
 [2025-1.17-02x89] Added command 'id' | Internal identifier for root as (id: 0)
 [2025-1.17-02x90] UID Support Structure
+[2025-1.17-02x91] Error in '/etc/init' throws a Kernel Panic
