@@ -39,6 +39,7 @@ Copyright (C) 2025 - Mr. Lima
 - **Bind** process objects `InputStream` and `OutputStream` moved to keys `in` and `out`
 - **Lua** added support for **methods** and `:` token
 - **Lua** added minimal support for **metatables**
+- Errors in `/etc/init` throws a _Kernel Panic_ and causes **MIDlet** death
 
 [ _Notes_ ]
 
